--- a/src/main/resources/static/styles/order/location.scss
+++ b/src/main/resources/static/styles/order/location.scss
@@ -36,7 +36,7 @@
           border: 1px solid $accent;
         }
         .loc-type-selectable.picked {
-          font-size: 2.25em;f
+          font-size: 2.25em;
           background-color: $accent;
         }
         .loc-type-selectable:hover {
